--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@clerk/localizations": "^2.5.8",
     "@clerk/nextjs": "^5.3.1",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
+    "@mui/x-date-pickers": "^7.13.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -19,13 +23,18 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.14.1",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.12",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.52.2",
+    "react-time-picker": "^7.0.0",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
     "svix": "^1.30.0",
