--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.2",
     "react-time-picker": "^7.0.0",
+    "sharp": "^0.33.5",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
     "svix": "^1.30.0",
@@ -51,7 +52,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^14.2.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
